# simpleCproject

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: logger.h  sigz.h
src/: CMakeLists.txt  logger.c  main.c  sigz.c
